# openclassrooms-projet-10

./: .flake8  .gitignore  README.md  pyproject.toml
softdesk/: test_import.py
softdesk/api/: permissions.py  views.py
softdesk/api/migrations/: 0001_initial.py  0002_project_contributor.py  0003_issue_comment.py  0004_auto_20250316_1458.py
softdesk/api/models/: __init__.py  comment.py  comment_models.py  contributor.py  contributor_models.py  issue.py  issue_models.py  project.py  project_models.py  user.py  user_models.py
softdesk/api/serializers/: __init__.py  comment.py  contributor.py  issue.py  project.py  user.py  user_serializers.py
softdesk/error_handling/: errors.py  exception_handler.py
softdesk/softdesk/: settings.py  urls.py
