[project]
name = "openclassrooms-projet-10"
version = "0.1.0"
description = ""
authors = [
    {name = "devexplorer",email = "contact@devexplorer.fr"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django (>=5.1.7,<6.0.0)",
    "djangorestframework-simplejwt (>=5.5.0,<6.0.0)",
    "drf-nested-routers (>=0.94.1,<0.95.0)",
    "djangorestframework (>=3.15.2,<4.0.0)",
    "flake8 (>=7.2.0,<8.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
